<resources>
    <string name="app_name">Reli</string>

    <string name="action_settings">Settings</string>
    <string name="settings_follow">Follow Reli</string>
    <string name="settings_unfollow">Unfollow Reli</string>
    <string name="settings_reli_info">Reli info</string>


    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_create_reli">Create a new Reli</string>

    <!-- Discussion -->
    <string name="discussion_title">Discussion</string>
    <string name="discussion_btn_text">Let\'s Reli!</string>
    <string name="discussion_text_topicTitle">Topic:</string>
    <string name="discussion_text_changeTag">Custom Reli\'s tags</string>
    <string name="discussion_edt_topic">What do you want to discuss?</string>
    <string name="discussion_radius">Reli\'s radius:</string>
    <string name="discussion_expiration">Reli will be expired in:</string>

    <!-- Poll -->
    <string name="poll_title">Poll</string>
    <string name="poll_btn_text">Let\'s Reli!</string>
    <string name="poll_text_questionTitle">Question:</string>
    <string name="poll_edt_question">What do you want to ask?</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1610941799185524</string>
    <string name="title_activity_main_drawer">MainDrawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string-array name="drawer_titles">
        <item>Tabs</item>
        <item>WebView</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="login_welcome_string_part_1">Welcome to</string>
    <string name="login_welcome_string_part_2">Reli</string>
    <string name="login_anonymously">Login anonymously</string>
    <string name="login_keep_login">Keep me logged in</string>

    <string name="title_activity_location">LocationActivity</string>

    <string name="left_tab">Relis Around Me</string>
    <string name="middle_tab">My Relis</string>
    <string name="right_tab">All Relis</string>

    <string name="type_msg">Type message</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">Forgot my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>

    <string name="search_tag">Search tag...</string>



    <string name="msg_no_relis_found">No Relis were found</string>

    <!-- Nav Drawer Menu Items -->
    <string name="nav_drawer_inbox">Inbox</string>
    <string name="nav_drawer_inbox_sub">See all the Relis around you</string>

    <string name="nav_drawer_sign_out">Sign Out</string>
    <string name="nav_drawer_sign_out_sub">Sign out of your Reli account</string>

    <string name="nav_drawer_exit">Quit Reli</string>
    <string name="nav_drawer_exit_sub">But come back soon!</string>

    <string name="nav_drawer_notification_settings">Notification Settings</string>
    <string name="nav_drawer_notification_settings_sub">Get notified about everything!</string>

    <string name="nav_drawer_default_settings">Default Settings</string>
    <string name="nav_drawer_default_settings_sub">Change Reli Default Settings</string>

    <string name="nav_drawer_tour">Grand Tour</string>
    <string name="nav_drawer_tour_sub">We want to show you around!</string>

    <string name="nav_drawer_faq">FAQ</string>
    <string name="nav_drawer_faq_sub">What do you want to know?</string>

    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_about_sub">Who are we?</string>

    <string name="nav_drawer_facebook">Reli in Facebook</string>
    <string name="nav_drawer_facebook_sub">Visit our Facebook page</string>

    <string-array name="nav_drawer_items">
        <item>@string/nav_drawer_inbox</item>
        <item>@string/nav_drawer_notification_settings</item>
        <item>@string/nav_drawer_default_settings</item>
        <!--<item>@string/nav_drawer_tour</item>-->
        <item>@string/nav_drawer_faq</item>
        <item>@string/nav_drawer_about</item>
        <item>@string/nav_drawer_facebook</item>
        <item>@string/nav_drawer_sign_out</item>
        <item>@string/nav_drawer_exit</item>
    </string-array>
    <string-array name="nav_drawer_items_sub">
        <item>@string/nav_drawer_inbox_sub</item>
        <item>@string/nav_drawer_notification_settings_sub</item>
        <item>@string/nav_drawer_default_settings_sub</item>
        <!--<item>@string/nav_drawer_tour_sub</item>-->
        <item>@string/nav_drawer_faq_sub</item>
        <item>@string/nav_drawer_about_sub</item>
        <item>@string/nav_drawer_facebook_sub</item>
        <item>@string/nav_drawer_sign_out_sub</item>
        <item>@string/nav_drawer_exit_sub</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guided_tour">Guided Tour</string>
    <string name="title_activity_tag_selection">Notification Settings</string>
    <string name="title_activity_main_relis_around_me">MainRelisAroundMeActivity</string>

    <string name="notifications_interesting_radius">Interesting radius:</string>
    <string name="notifications_interesting_tags">Interesting tags:</string>
    <string name="select_all">Select all</string>

    <string name="default_settings_radius">Default radius for new Relis:</string>
    <string name="default_settings_expiration">Default expiration time for new Relis:</string>

    <string name="new_settings_saved">New settings have been saved!</string>


    <string name="faq_q1">When was Reli developed?</string>
    <string name="faq_a1">Reli was developed as part of POST-PC course in the Hebrew University of Jerusalem, and its first version was released on September 2015.</string>
    <string name="faq_q2">Who is Reli?</string>
    <string name="faq_a2">Oh, that is an excellent question! Many people wondered who is this magical Reli.</string>
    <string name="faq_q3">I love your app! How can I invest some money?</string>
    <string name="faq_a3">Thanks, we love you too! \nWe would love to hear from you! Please contact us at thereliapp@gmail.com.</string>
    <string name="faq_q4">The app crashes. How can I report it?</string>
    <string name="faq_a4">We are sorry to hear that, and will do our best to fix the problem. Please contact us at thereliapp@gmail.com.</string>

    <string-array name="faq_questions">
        <item>@string/faq_q1</item>
        <item>@string/faq_q2</item>
        <item>@string/faq_q3</item>
        <item>@string/faq_q4</item>
    </string-array>
    <string-array name="faq_answers">
        <item>@string/faq_a1</item>
        <item>@string/faq_a2</item>
        <item>@string/faq_a3</item>
        <item>@string/faq_a4</item>
    </string-array>

    <string name="about_discussion_title_creation">Creation date:</string>
    <string name="about_discussion_title_expiration">Expiration date:</string>
    <string name="about_discussion_title_update">Last updated:</string>
    <string name="about_discussion_title_owner">Owner:</string>
    <string name="about_discussion_title_radius">Radius:</string>
    <string name="about_discussion_title_tags">Tags:</string>

    <string name="change_settings">Custom new Reli\'s settings</string>

    <string name="create_discussion_pick_tags">Choose the tags:</string>

    <string name="dialog_topic_title">Empty Topic</string>
    <string name="dialog_topic_message">We\'re sorry, but Relis cannot be created without a topic.</string>

    <string name="dialog_sign_out_title">Are you sure?</string>
    <string name="dialog_sign_out_message">Are you sure you want to sign out? This means that your Relis might not be accessible in the future!</string>
    <string name="successful_sign_out">You signed out successfully</string>

    <string name="dialog_exit_title">Are you sure?</string>
    <string name="dialog_exit_message">Are you sure you want to exit?</string>

    <string name="dialog_no_internet_connection_title">No Internet access</string>
    <string name="dialog_no_internet_connection_message">Reli can\'t work without internet access</string>

    <string name="dialog_no_location_found_title">Location couldn\'t be found</string>
    <string name="dialog_no_location_found_message">Please turn on your location services. Exiting Reli.</string>

    <string name="dialog_using_last_location_title">Location services are disabled</string>
    <string name="dialog_using_last_location_message">For better accuracy, please turn on your location services.\nDon\'t be shy</string>

    <string name="ok">OK</string>
    <string name="ok_sign_out">Sign out</string>
    <string name="ok_exit">Exit</string>
    <string name="cancel">Cancel</string>

    <string name="message_follow">You\'ve followed this Reli</string>
    <string name="message_unfollow">You\'ve unfollowed this Reli</string>

    <string name="no_tags">(none)</string>
    <string name="title_activity_test">testActivity</string>
    <string name="no_relis_all">There are no Relis in your location yet.\nDon\'t be shy, add a new one!</string>
    <string name="no_relis_my">You currently have no Relis.\nSwipe and check out some Relis!</string>

    <string name="notification_new_discussion"> has just created a new Reli that might interest you. Check it out!</string>
    <string name="notification_new_message_part_1"> posted in </string>
    <string name="notification_new_message_part_2">. Check it out!</string>
</resources>